Refatorando codigo